<resources>
    <string name="app_name">India Inclusion Summit</string>
    <string name="app_name_short">IIS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="emailTextBoxString">Enter Patient ID</string>
    <string name="mobileNumberTextBoxString">Enter 10-digit Mobile Number</string>
    <string name="LoginBtnText">LOG IN</string>
    <string name="scanBtnText">SCAN</string>
    <string name="play_message_text">Click above button to listen to Live Commentary</string>
    <string name="pause_message_text">Click above button to stop listening to Live Commentary</string>
    <string name="live_commentory_play_message">Click here to play live audio commentary</string>
    <string name="live_commentory_pause_message">Click here to stop live audio commentary</string>
    <string name="networkingStringText">Networking View</string>
    <string name="navigationStringText">Navigation View</string>
    <string name="speech_prompt">Say something</string>
    <string name="speech_not_supported">Sorry! Your device doesnt support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="category_select">Choose an interest category</string>
    <string name="people_list_catg">People for Interest Category: </string>
    <string name="networking_title">Networking List</string>
    <string name="aboutus_title">About Us</string>
    <string name="feedback_title">Give us your Feedback</string>
    <string name="REGISTRATION">Registration</string>
    <string name="INTERACTION">Interaction</string>
    <string name="TOILET_MEN">Male Restroom</string>
    <string name="TOILET_WOMEN">Female Restroom</string>
    <string name="HALL">Hall</string>
    <string name="NavigationHelper"> </string>
    <string name="NAVIGATION">NAVIGATION</string>
    <string name="DISTANCE">DISTANCE</string>
    <string name="NAV_VALUE"> </string>
    <string name="DISTANCE_VALUE"> </string>
    <string name="Compass_text">Compass</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_history_summary">Store your scans in History</string>
    <string name="preferences_history_title">Add to History</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="preferences_name">Settings</string>
    <string name="preferences_orientation_title">No automatic rotation</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="acc_email_address">Enter your email address</string>
    <string name="acc_mobile_number">Enter your 10 digit mobile number</string>
    <string name="login_button">click here to login</string>
    <string name="scan_button">click here to scan QR code. Click the button and hold the screen in landscape mode over the qr code to scan</string>
    <string name="enter_query">enter your query</string>
    <string name="record_button">click here to record your query</string>
    <string name="send_query">click here to send your query</string>
    <string name="querySendButton">SEND</string>
    <string name="networking_consent_textbox">I would like to network with other participants:</string>
    <string name="iis_logo_message_accessibility">India Inclusion Summit logo</string>
    <string name="hcp_message_accessibility">Powered by SAP HANA Cloud Platform</string>
    <string name="version_message_accessibility">Version 1.0.1</string>
    <string name="application_done_message_accessibility">Application done by volunteers of India Inclusion Summit</string>
    <string name="copyright_message_accessibility">copyright India Inclusion Summit</string>
    <string name="consent_message_accessibility">Please select from below drop down how you would like to network with fellow participants</string>
    <string name="feedback_event_message_accessibility">Please provide your feedback for the event</string>
    <string name="select_star_message_accessibility">select the number of stars you would provide as feedback</string>
    <string name="feedback_app_message_accessibility">Please provide your feedback for the event</string>
    <string name="feedback_remarks_message_accessibility">Please provide any additional remarks you have in the below field</string>
    <string name="nav_registration_accessibility">click here to navigate to Registration area</string>
    <string name="nav_interaction_accessibility">click here to navigate to interaction zone</string>
    <string name="nav_toilet_accessibility">click here to navigate to Male washroom area</string>
    <string name="nav_toiletf_accessibility">click here to navigate to Female washroom area</string>
    <string name="nav_hall_accessibility">click here to navigate to main hall</string>
</resources>