<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/iis_background_image">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailAddress"
        android:gravity="center_horizontal"
        android:hint="@string/emailTextBoxString"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/acc_email_address"
        android:layout_above="@+id/mobileNumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="44dp" />
    <requestFocus />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/mobileNumber"
        android:gravity="center_horizontal"
        android:hint="@string/mobileNumberTextBoxString"
        android:maxLength="10"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/acc_mobile_number"
        android:layout_above="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="34dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginBtnText"
        android:id="@+id/loginBtn"
        android:accessibilityTraversalAfter="@+id/consent_spinner"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/login_button"
        android:background="@android:color/holo_orange_light"
        android:textColor="@android:color/white"
        android:layout_marginLeft="43dp"
        android:layout_marginStart="43dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scanBtnText"
        android:id="@+id/scanBtn"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/scan_button"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_orange_light"
        android:layout_marginRight="46dp"
        android:layout_marginEnd="46dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/consent_spinner"
        android:layout_alignEnd="@+id/consent_spinner" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/iis_small_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/iis_logo_message_accessibility" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/consent_spinner"
        android:layout_above="@+id/loginBtn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="26dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/networking_consent_textbox"
        android:id="@+id/textView5"
        android:gravity="center"
        android:layout_above="@+id/consent_spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/consent_message_accessibility" />

</RelativeLayout>
