<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/iis_background_image"
    android:id="@+id/navigationMainView"
    android:weightSum="1">


    <Button
        android:layout_width="140dp"
        android:layout_height="25dp"
        android:text="@string/REGISTRATION"
        android:id="@+id/registerbutton"
        android:background="@android:color/holo_orange_light"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/white"
        android:contentDescription="@string/nav_registration_accessibility"
        android:focusable="true"/>

    <Button
        android:layout_width="140dp"
        android:layout_height="25dp"
        android:text="@string/INTERACTION"
        android:id="@+id/interactionbutton"
        android:background="@android:color/holo_orange_light"
        android:layout_below="@+id/registerbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/white"
        android:contentDescription="@string/nav_interaction_accessibility" />

    <Button
        android:layout_width="140dp"
        android:layout_height="25dp"
        android:text="@string/TOILET_MEN"
        android:id="@+id/btnToiletMale"
        android:background="@android:color/holo_orange_light"
        android:layout_below="@+id/interactionbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/white"
        android:contentDescription="@string/nav_toilet_accessibility" />

    <Button
        android:layout_width="140dp"
        android:layout_height="25dp"
        android:text="@string/HALL"
        android:id="@+id/hallbutton"
        android:background="@android:color/holo_orange_light"
        android:layout_marginTop="36dp"
        android:textColor="@android:color/white"
        android:contentDescription="@string/nav_hall_accessibility"
        android:layout_below="@+id/btnToiletMale"
        android:layout_toLeftOf="@+id/map_layout"
        android:layout_toStartOf="@+id/map_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/interactionbutton"
        android:layout_toEndOf="@+id/interactionbutton"
        android:id="@+id/map_layout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageViewMap"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:src="@drawable/indoor_map"
            android:layout_alignParentBottom="false"
            android:layout_centerInParent="true"
            android:visibility="invisible" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/NavigationHelper"
        android:id="@+id/nav_guide"
        android:textSize="15dp"
        android:layout_below="@+id/hallbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/map_layout"
        android:layout_toStartOf="@+id/map_layout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/NAVIGATION"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="10dp"
        android:importantForAccessibility="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/NAV_VALUE"
        android:id="@+id/NAV_VALUE"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp" />
    <requestFocus />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/DISTANCE"
        android:id="@+id/textView4"
        android:layout_below="@+id/NAV_VALUE"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="20dp"
        android:importantForAccessibility="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/DISTANCE_VALUE"
        android:id="@+id/DISTANCE_VAL"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewCompass"
        android:layout_marginTop="35dp"
        android:src="@drawable/img_compass"
        android:layout_below="@+id/nav_guide"
        android:layout_alignLeft="@+id/hallbutton"
        android:layout_alignStart="@+id/hallbutton"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Compass_text"
        android:id="@+id/tvHeading"
        android:layout_below="@+id/imageViewCompass"
        android:layout_alignLeft="@+id/imageViewCompass"
        android:layout_alignStart="@+id/imageViewCompass"
        android:visibility="invisible" />

    <Button
        android:layout_width="140dp"
        android:layout_height="25dp"
        android:text="@string/TOILET_WOMEN"
        android:id="@+id/btnFemaleToilet"
        android:background="@android:color/holo_orange_light"
        android:textColor="@android:color/white"
        android:contentDescription="@string/nav_toiletf_accessibility"
        android:layout_below="@+id/btnToiletMale"
        android:layout_marginTop="6dp"
        android:layout_toLeftOf="@+id/map_layout"
        android:layout_toStartOf="@+id/map_layout" />


</RelativeLayout>

