<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/iis_background_image"
    tools:context=".AboutUsActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewIIS"
        android:src="@drawable/iis_small_logo"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/iis_logo_message_accessibility"
        android:layout_above="@+id/editText3"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:text="Powered by SAP HANA Cloud Platform"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textStyle="bold"
        android:textColor="#ff180110"
        android:contentDescription="@string/hcp_message_accessibility"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText2"
        android:text="Version : 1.0.1"
        android:layout_below="@+id/editText3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp"
        android:contentDescription="@string/version_message_accessibility" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editTextDisclaimer"
        android:text="Application done by volunteers of IIS."
        android:contentDescription="@string/application_done_message_accessibility"
        android:layout_below="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp" />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="© India Inclusion Summit(IIS)"
        android:id="@+id/textViewIIS"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/copyright_message_accessibility" />


</RelativeLayout>
