<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/iis_background_image">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.indiainclusionsummit.indiainclusionsummit.FeedbackActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewIIS"
        android:src="@drawable/iis_small_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/iis_logo_message_accessibility" />
    <requestFocus />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Feedback for Event"
        android:id="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageViewIIS"
        android:contentDescription="@string/feedback_event_message_accessibility" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingEventFeedback"
        android:layout_below="@+id/textView3"
        android:layout_alignRight="@+id/imageViewIIS"
        android:layout_alignEnd="@+id/imageViewIIS"
        android:stepSize="1"
        android:contentDescription="@string/select_star_message_accessibility" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Mobile Application"
        android:id="@+id/textView6"
        android:layout_below="@+id/ratingEventFeedback"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/feedback_app_message_accessibility" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingAppFeedback"
        android:layout_below="@+id/textView6"
        android:layout_alignRight="@+id/imageViewIIS"
        android:layout_alignEnd="@+id/imageViewIIS"
        android:stepSize="1"
        android:contentDescription="@string/select_star_message_accessibility" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Remarks"
        android:id="@+id/textView7"
        android:layout_below="@+id/ratingAppFeedback"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/feedback_remarks_message_accessibility" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/etRemarksFeed"
        android:editable="true"
        android:enabled="true"
        android:hint="Any Other Feedback"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/ratingAppFeedback"
        android:layout_alignStart="@+id/ratingAppFeedback"
        android:lines="1"
        android:layout_alignRight="@+id/ratingAppFeedback"
        android:layout_alignEnd="@+id/ratingAppFeedback" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit Feedback"
        android:id="@+id/btnSubmitFeedback"
        android:textStyle="bold"
        android:layout_below="@+id/etRemarksFeed"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

</ScrollView>
